# ucx-playground

./: README.md  justfile  meson.build
include/: helper.hpp
src/: client.cpp  server.cpp  ucp_context.cpp  ucp_context.hpp  ucp_endpoint.cpp  ucp_endpoint.hpp  ucp_listener.cpp  ucp_listener.hpp  ucp_worker.cpp  ucp_worker.hpp  ucx_helper.cpp  ucx_helper.hpp
src/async/: auto_reset_event.hpp  single_use_event.hpp  task.hpp  ucp_task.hpp
subprojects/: aligned_atomic.wrap  backward-cpp.wrap  stacktrace.wrap  yaml-cpp.wrap
ucp_hello_world/: hello_world_util.h  ucp_client_server.c
